Fixed logo on mobile

--- a/style.css
+++ b/style.css
@@ -131,9 +131,9 @@
         display: block;
     }
     .logo{
-        margin-left: 2em;
+        margin-left: 5em;
         padding: 2em 0;
-        width: 150px;
+        width: 135px;
     }
     .head{
         text-align: center;
